--- a/5051/Views/Student/Default.cshtml
+++ b/5051/Views/Student/Default.cshtml
@@ -22,7 +22,7 @@
 <div id="background">
     <h1 align="center">Student store name</h1>
     <div class="row text-center">
-        <img src="~/Content/img/storeMockup.jpg" class="img-responsive" />
+        <img src="~/Content/img/storeMockup.png" class="img-responsive" />
     </div>
     <div id="studentnavicons">
         <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs"></i></a>
@@ -33,29 +33,5 @@
     </div>
     <div id="studentnaviconstext">
         <p></p>
-    </div>
-
-    <div class="row">
-        <h2>Inventory</h2>
-        <p>Item1</p>
-        <div class="progress">
-            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-        <p>Item2</p>
-        <div class="progress">
-            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-        <p>Item3</p>
-        <div class="progress">
-            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-        <p>Item4</p>
-        <div class="progress">
-            <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-        <p>Item5</p>
-        <div class="progress">
-            <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 60%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
     </div>
 </div>
