--- a/5051/Views/Student/Default.cshtml
+++ b/5051/Views/Student/Default.cshtml
@@ -12,9 +12,9 @@
             function () {
                 $("#studentnaviconstext p").text($(this).attr("title"));
             },
-            function () {
+           /** function () {
                 $("#studentnaviconstext p").empty();
-            })
+            }) **/
             
 	});
 </script>
@@ -25,11 +25,11 @@
         <img src="~/Content/img/storeMockup.png" class="img-responsive" />
     </div>
     <div id="studentnavicons">
-        <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs"></i></a>
-        <a href="~/Student/Market" title="Marketplace"><i class="fas fa-shopping-cart"></i></a>
-        <a href="~/Student/Accomplishments" title="Accomplishments"><i class="fas fa-trophy"></i></a>
-        <a href="~/Student/Avatar_Fab5" title="Avatar"><i class="fas fa-user"></i></a>
-        <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt"></i></a>
+        <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs" style="color:#7a553b"></i></a>
+        <a href="~/Student/Market" title="Marketplace"><i class="fas fa-shopping-cart" style="color:#7a553b"></i></a>
+        <a href="~/Student/Accomplishments" title="Accomplishments"><i class="fas fa-trophy" style="color:#7a553b"></i></a>
+        <a href="~/Student/Avatar_Fab5" title="Avatar"><i class="fas fa-user" style="color:#7a553b"></i></a>
+        <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt" style="color:#7a553b"></i></a>
     </div>
     <div id="studentnaviconstext">
         <p></p>
