--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -42,7 +42,7 @@ textarea {
 #clock {
     display: flex;
     display: -webkit-flex;
-    margin=top: 20px;
+    margin-top: 20px;
     width: 400px;
     font-family: Lato;
     font-size: 5em;
@@ -161,6 +161,7 @@ a.navbar-brand {
 }
 
 .footer {
+    margin-top:100px;
     width: 100%;
     /* Set the fixed height of the footer here */
     height: 60px;
@@ -175,20 +176,27 @@ a.navbar-brand {
 #avatar {
     border: 5px solid white;
     border-radius: 150px;
-    -webkit-border-radius: 150px;
-    -moz-border-radius: 150px;
 }
 
 #avata-red {
-    border: 1px solid red;
+    border: 4px solid red;
     border-radius: 150px;
-    -webkit-border-radius: 150px;
-    -moz-border-radius: 150px;
 }
 
 #avatar-green {
     border: 5px solid green;
     border-radius: 150px;
-    -webkit-border-radius: 150px;
-    -moz-border-radius: 150px;
 }
+
+#listusers {
+    height: 200px;
+    overflow-y: auto;
+    margin-bottom: 20px;
+    columns: 100px 2;
+}
+
+    #listusers a {
+        margin-bottom: 20px;
+        margin-left: 20px;
+        color: white;
+    }
