changed site name

--- a/5051/Views/Home/Index.cshtml
+++ b/5051/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
     <header class="masthead">
 
-        <h1>SUperNova</h1>
+        <h1>Nova Town</h1>
         <h3>Earn Points, to update your avatar and stores to show off your collection!</h3>
 
     </header>
