--- a/5051/Content/Login.css
+++ b/5051/Content/Login.css
@@ -32,6 +32,8 @@ a {
     }
 
 .form {
+    opacity: 0.7;
+    filter: alpha(opacity=70);
     background: #3e4444;
     padding: 40px;
     max-width: 600px;
