--- a/5051/Content/Login.css
+++ b/5051/Content/Login.css
@@ -10,9 +10,11 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
     width: 100%;
     height: 100%;
     margin: 0 auto;
+    z-index: 1;
 }
 
 
@@ -45,8 +47,11 @@ a {
 h1 {
     text-align: center;
     color: #fff;
+    position: relative;
+    top: 5px;
     font-weight: 300;
     margin: 0 0 40px;
+    z-index: 2;
 }
 
 h2{
