--- a/5051/Views/Student/Default.cshtml
+++ b/5051/Views/Student/Default.cshtml
@@ -5,33 +5,27 @@
 }
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
+
 <script>
     $(document).ready(
     function () {
         $('#studentnavicons a').hover(
             function () {
                 $("#studentnaviconstext p").text($(this).attr("title"));
-            },
-           /** function () {
-                $("#studentnaviconstext p").empty();
-            }) **/
-            
+            },        
 	});
 </script>
 
 <div id="background">
-    <h1 align="center">Student store name</h1>
     <div class="row text-center">
-        <img src="~/Content/img/storeMockup.png" class="img-responsive" />
+        <h1 class="student-heading" align="center">Student store name</h1>
+        <div id="studentnavicons">
+            <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs" style="color:#7a553b"></i></a>
+            <a href="~/Student/Market" title="Marketplace"><i class="fas fa-shopping-cart" style="color:#7a553b"></i></a>
+            <a href="~/Student/Accomplishments" title="Yep, I did that"><i class="fas fa-trophy" style="color:#7a553b"></i></a>
+            <a href="~/Student/Avatar_Fab5" title="Avatar"><i class="fas fa-user" style="color:#7a553b"></i></a>
+            <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt" style="color:#7a553b"></i></a>
+        </div>
     </div>
-    <div id="studentnavicons">
-        <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs" style="color:#7a553b"></i></a>
-        <a href="~/Student/Market" title="Marketplace"><i class="fas fa-shopping-cart" style="color:#7a553b"></i></a>
-        <a href="~/Student/Accomplishments" title="Accomplishments"><i class="fas fa-trophy" style="color:#7a553b"></i></a>
-        <a href="~/Student/Avatar_Fab5" title="Avatar"><i class="fas fa-user" style="color:#7a553b"></i></a>
-        <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt" style="color:#7a553b"></i></a>
-    </div>
-    <div id="studentnaviconstext">
-        <p></p>
-    </div>
+    <img src="~/Content/img/storeMockup.png" class="img-responsive" />
 </div>
