--- a/5051/Views/Student/Default.cshtml
+++ b/5051/Views/Student/Default.cshtml
@@ -18,7 +18,7 @@
 
 <div id="background">
     <div class="row text-center">
-        <h1 class="student-heading" align="center">Student store name</h1>
+        <h1 class="student-heading" align="center">Nhu's Moo Shoppe</h1>
         <div id="studentnavicons">
             <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs" style="color:#7a553b"></i></a>
             <a href="~/Student/Market" title="Marketplace"><i class="fas fa-shopping-cart" style="color:#7a553b"></i></a>
