Community page fix

--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -100,7 +100,7 @@ textarea {
     font-size: 2.0vh;
 }
 
-#img-community {
+#wireframe-student {
     position: relative;
     margin-top: 100px;
     margin-bottom: 100px;
