--- a/5051/Views/Student/Community.cshtml
+++ b/5051/Views/Student/Community.cshtml
@@ -3,7 +3,6 @@
     ViewBag.Title = "Community";
 }
 
-
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
 
@@ -26,10 +25,10 @@
         <div id="studentnavicons">
             <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs" style="color:#7a553b"></i></a>
             <a href="~/Student/Market" title="Marketplace"><i class="fas fa-shopping-cart" style="color:#7a553b"></i></a>
-            <a href="~/Student/Accomplishments" title="Yep, I did that"><i class="fas fa-trophy" style="color:#7a553b"></i></a>
+            <a href="~/Student/Accomplishments" title="Yep, I did this"><i class="fas fa-trophy" style="color:#7a553b"></i></a>
             <a href="~/Student/Avatar_Fab5" title="Avatar"><i class="fas fa-user" style="color:#7a553b"></i></a>
             <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt" style="color:#7a553b"></i></a>
         </div>
-        <img src="~/Content/img/StudentCommunity.png" class="img-responsive" id="img-community" />
+        <img src="~/Content/img/StudentCommunity.png" class="img-responsive" id="wireframe-student" />
     </div>
 </div>
