--- a/5051/Views/Portal/Logout.cshtml
+++ b/5051/Views/Portal/Logout.cshtml
@@ -5,16 +5,30 @@
 
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
 
-<div class="container">
-    <div id="background">
-        <div class="row text-center">
-            <img src="~/Content/img/student_logout.png" width="800" />
+<script>
+    $(document).ready(
+    function () {
+        $('#studentnavicons a').hover(
+            function () {
+                $("#studentnaviconstext p").text($(this).attr("title"));
+            },
+	});
+</script>
+
+<div id="background">
+    <div class="row text-center">
+        <h1 class="student-header" align="center">Later!</h1>
+        <div id="studentnavicons">
+            <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs" style="color:#7a553b"></i></a>
+            <a href="~/Student/Market" title="Marketplace"><i class="fas fa-shopping-cart" style="color:#7a553b"></i></a>
+            <a href="~/Student/Accomplishments" title="Yep, I did this"><i class="fas fa-trophy" style="color:#7a553b"></i></a>
+            <a href="~/Student/Avatar" title="Avatar"><i class="fas fa-user" style="color:#7a553b"></i></a>
+            <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt" style="color:#7a553b"></i></a>
         </div>
-        <div style="font-size:3em">
-            <a href="~/Student/Default"><i class="far fa-hand-point-left"></i></a>
-        </div>
+        <p class="community-text-medium">You are now logged out.</p>
+        <p class="community-text-small">Come back soon. We'll miss you.</p>
+        <img src="~/Content/img/student_logout.png" class="img-responsive" id="wireframe-student" />
     </div>
 </div>
