Fixed student report

--- a/5051/Views/Student/Report.cshtml
+++ b/5051/Views/Student/Report.cshtml
@@ -3,15 +3,11 @@
     ViewBag.Title = "My Reports";
 }
 
-<div class="container">
-    <div id="background">
-        <h2 align="center">My Report</h2>
+<link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
 
-        <div class="container">
-            <div class="row text-center">
-                <img src="~/Content/img/studentReportWireframe.png" width="800" class="img-responsive" />
-                <br />
-            </div>
-        </div>
+<div id="background">
+    <div class="row text-center">
+        <h2 align="center">My Report</h2>
+        <img src="~/Content/img/studentReportWireframe.png" width="800" class="img-responsive" id="wireframe-student" />
     </div>
 </div>
