--- a/5051/Views/Student/Accomplishments.cshtml
+++ b/5051/Views/Student/Accomplishments.cshtml
@@ -21,6 +21,7 @@
         <h1 class="student-header" align="center">Yep, I did this</h1>
 
         <div id="studentnavicons">
+            <a href="~/Student/Default" title="Store"><i class="fas fa-store-alt" style="color:#7a553b"></i></a>
             <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs" style="color:#7a553b"></i></a>
             <a href="~/Student/Market" title="Marketplace"><i class="fas fa-shopping-cart" style="color:#7a553b"></i></a>
             <a href="~/Student/Accomplishments" title="Yep, I did this"><i class="fas fa-trophy" style="color:#7a553b"></i></a>
