--- a/5051/Views/Student/Report.cshtml
+++ b/5051/Views/Student/Report.cshtml
@@ -8,6 +8,7 @@
 <div id="background">
     <div class="row text-center">
         <h2 align="center">My Report</h2>
+        <p class="student-text-small">Total hours: <span class="report-color">120h 45m</span>  Average hours: <span class="report-color">5h 30m</span>  Best day(s): <span class="report-color">16th, 19th, 24th</span>  Gone: <span class="report-color">9th, 26th </span></p>
         <img src="~/Content/img/studentReportWireframe.png" width="800" class="img-responsive" id="wireframe-student" />
     </div>
 </div>
