--- a/5051/Views/Portal/Logout.cshtml
+++ b/5051/Views/Portal/Logout.cshtml
@@ -28,8 +28,8 @@
             <a href="~/Student/Avatar" title="Avatar"><i class="fas fa-user" style="color:#7a553b"></i></a>
             <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt" style="color:#7a553b"></i></a>
         </div>
-        <p class="community-text-medium">You are now logged out.</p>
-        <p class="community-text-small">Come back soon. We'll miss you.</p>
+        <p class="student-text-medium">You are now logged out.</p>
+        <p class="student-text-small">Come back soon. We'll miss you.</p>
         <img src="~/Content/img/student_logout.png" class="img-responsive" id="wireframe-student" />
     </div>
 </div>
