--- a/5051/Views/Student/Community.cshtml
+++ b/5051/Views/Student/Community.cshtml
@@ -20,8 +20,8 @@
     <div class="row text-center">
         <h1 class="student-header" align="center">Community</h1>
 
-        <p class="community-text-medium">Visit friends!</p>
-        <p class="community-text-small">Total coins: 434</p>
+        <p class="student-text-medium">Visit friends!</p>
+        <p class="student-text-small">Total coins: 434</p>
         <div id="studentnavicons">
             <a href="~/Student/Default" title="Store"><i class="fas fa-store-alt" style="color:#7a553b"></i></a>
             <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs" style="color:#7a553b"></i></a>
