--- a/5051/Content/Login.css
+++ b/5051/Content/Login.css
@@ -8,7 +8,7 @@
 #background {
     background-image: url("../Content/img/sunset.png");
     background-position: center center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
     position: relative;
     width: 100%;
@@ -17,6 +17,17 @@
     z-index: 1;
 }
 
+#background2 {
+    background-image: url("../Content/img/daytimeBackground.png");
+    background-position: center center;
+    background-repeat: repeat;
+    background-size: cover;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    z-index: 1;
+}
 
 html {
     overflow-y: scroll;
