Edited Student/Admin intro pages

--- a/5051/Views/Home/AdminIntro.cshtml
+++ b/5051/Views/Home/AdminIntro.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Shop Example";
+    ViewBag.Title = "Admin Intro";
 }
 <h2>@ViewBag.Title.</h2>
 
-<h3>Shop for cool stuff</h3>
+<p>What a teacher can find and use in the Admin Portal. More coming soon.</p>
 
-<p>See the store</p>
+
