--- a/5051/Views/Home/StudentIntro.cshtml
+++ b/5051/Views/Home/StudentIntro.cshtml
@@ -1,19 +1,8 @@
 ﻿@{
-    ViewBag.Title = "House Example";
+    ViewBag.Title = "Student Intro";
 }
 <h2>@ViewBag.Title.</h2>
 
-<h3>House Example</h3>
-
-<p>Check out these awesome avatar houses.</p>
+<p>What a student can find to do in the Student Portal. More coming soon.</p>
 
 
-<div class="row">
-
-<div class="col-sm-2">
-    <span>
-        My Avatar goes here !!!
-    </span>
-</div>
-
-</div>
