--- a/5051/Views/Admin/Calendar.cshtml
+++ b/5051/Views/Admin/Calendar.cshtml
@@ -2,12 +2,21 @@
 @{
     ViewBag.Title = "Calendar";
 }
-<div class="container">
-    <h2>Welcome to Admin Calendar</h2>
-    <p>Calendar to override days to take or to not take attendance. To be implemented further</p>
-    <br />
-    <br />
 
-    <img src="~/Content/img/defaultCalendarX.png" width="700" />
+<link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
+
+<div id="background2">
+    <div class="row text-center">
+        <div class="container">
+            <h2>Welcome to Admin Calendar</h2>
+            <p>Calendar to override days to take or to not take attendance. To be implemented further</p>
+            <br />
+            <br />
+
+            <img src="~/Content/img/defaultCalendarX.png" width="700"/>
+
+        </div>
+    </div>
+</div>
 
 
