Edited Home page, create new KioskIntro page

--- a/5051/Views/Home/Index.cshtml
+++ b/5051/Views/Home/Index.cshtml
@@ -19,42 +19,35 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-gift text-primary sr-icons"></i>
-                    <h3>Earn Points</h3>
-                    <p class="text-muted">Each student earns points while attending class, and can use the points to update their personal Avatar, create stores, buy and sell items to complete their collection. </p>
+                    <i class="fas fa-4x fa-gamepad"></i>
+                    <h3>Play Game</h3>
+                    <p class="text-muted">Student game and report information. How to play and use.</p>
                     <p>
-                        @Html.ActionLink("Avatar Houses", "HouseExample", "Home", null, new { @class = "btn btn-primary" })
+                        @Html.ActionLink("Student Intro", "StudentIntro", "Home", null, new { @class = "btn btn-primary" })
                     </p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                    <h3>Level up</h3>
-                    <p class="text-muted">Earn Bonus points by showing up to class early or staying after school.</p>
+                    <i class="fas fa-4x fa-file-alt"></i>
+                    <h3>Build Reports</h3>
+                    <p class="text-muted">Teacher reports with attendance information. How to use. </p>
                     <p>
-                        @Html.ActionLink("Store", "ShopExample", "Home", null, new { @class = "btn btn-primary" })
+                        @Html.ActionLink("Teacher Intro", "AdminIntro", "Home", null, new { @class = "btn btn-primary" })
                     </p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-chart-bar text-primary sr-icons"></i>
-                    <h3>Track your Progress</h3>
-                    <p class="text-muted">View your attendance history, and track your progress over the school year.</p>
+                    <i class="fas fa-4x fa-laptop"></i>
+                    <h3>Login to Kiosk</h3>
+                    <p class="text-muted">Kiosk information. How to login and use.</p>
                     <p>
-                        @Html.ActionLink("Show Me", "StudentExample", "Home", null, new { @class = "btn btn-primary" })
+                        @Html.ActionLink("Kiosk Intro", "KioskIntro", "Home", null, new { @class = "btn btn-primary" })
                     </p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fa fa-4x fa-shopping-basket text-primary sr-icons" data-sr-id="5" style="visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "></i>
-                    <h3>Customize your store</h3>
-                    <p class="text-muted">Buy items from Marketplace and stock up your store to earn extra rewards and expand all your stores.</p>
-                </div>
-            </div>
-            </div>
+           
         </div>
     </section>
 
