--- a/5051/Views/Kiosk/Index.cshtml
+++ b/5051/Views/Kiosk/Index.cshtml
@@ -5,145 +5,148 @@
 }
 
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
-<script>
-    $(document).ready(
-        function () {
-            $('#navigation a').hover(
-                function () {
-                    var linkIndex = $(this).attr("data-filename");
-                    $(this).addClass('hover');
-                    $('.box img').attr('src', linkIndex);
-                }),
-                $('#navigation a').click(
-                    function () {
-                        var linkIndex = $(this).attr("data-filename");
-                        $(this).addClass('hover');
-                        $('.box img').attr('src', linkIndex);
-                        $(".box p").text("You have selected" + $(this).text());
-                    }
-                )
-        });
 
-</script>
-
-<div class="form">
-
-    <div id="row">
-        <center>
-            <h1 class="text-center">Good Morning!</h1>
-            <div id="clock">
-                <p class="unit" id="hours"></p>:
-                <p class="unit" id="minutes"></p>:
-                <p class="unit" id="seconds"></p>
-                <p class="unit" id="ampm"></p>
-                <script src="~/Scripts/clock.js"></script>
-            </div>
-        </center>
-    </div>
+<div id="background2">
     <div class="row">
-        <div class="col-md-6">
+        <script>
+            $(document).ready(
+                function () {
+                    $('#navigation a').hover(
+                        function () {
+                            var linkIndex = $(this).attr("data-filename");
+                            $(this).addClass('hover');
+                            $('.box img').attr('src', linkIndex);
+                        }),
+                        $('#navigation a').click(
+                            function () {
+                                var linkIndex = $(this).attr("data-filename");
+                                $(this).addClass('hover');
+                                $('.box img').attr('src', linkIndex);
+                                $(".box p").text("You have selected" + $(this).text());
+                            }
+                        )
+                });
 
-            <p class="text-white">Select your profile to login</p>
-            <div id="listusers">
-                <div id="navigation">
-                    <ul class="list-unstyled">
+        </script>
+
+        <div class="form">
+
+            <div id="row">
+                <center>
+                    <h1 class="text-center">Good Morning!</h1>
+                    <div id="clock">
+                        <p class="unit" id="hours"></p>:
+                        <p class="unit" id="minutes"></p>:
+                        <p class="unit" id="seconds"></p>
+                        <p class="unit" id="ampm"></p>
+                        <script src="~/Scripts/clock.js"></script>
+                    </div>
+                </center>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+
+                    <p class="text-white">Select your profile to login</p>
+                    <div id="listusers">
+                        <div id="navigation">
+                            <ul class="list-unstyled">
+                                @{
+                                    // Logged Out first
+                                    foreach (var item in Model.StudentList)
+                                    {
+                                        if (item.Status == _5051.Models.StudentStatusEnum.Out)
+                                        {
+                                            <li>
+                                                <a id="@item.Name" href="~/Kiosk/SetLogIn/@item.Id" data-filename="/Content/img/@item.AvatarUri">
+                                                    <img id="avatar-red" src="~/Content/img/@item.AvatarUri" width="25" height="25" />
+                                                    <!--<i class="glyphicon glyphicon-user"></i>-->  @item.Name
+                                                </a>
+                                            </li>
+
+                                        }
+                                    }
+                                }
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="box">
+                        <center>
+                            <img id="avatar" src="~/Content/img/defaultavatarX.png" width="200" height="200" />
+                            <p></p>
+                        </center>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6 text-left">
+                    @Html.ActionLink("New profile", "NewProfile", "Kiosk", null, new { @class = "button button-block" })
+                </div>
+                <div class="col-md-6">
+                    <div class="submitLink text-center">
+                        <a href="#" data-toggle="modal" data-target="#loginModal" class="button">Clock in</a>
+                        <a href="#" data-toggle="modal" data-target="#logoutModal" class="button">Clock Out</a>
+                    </div>
+                </div>
+            </div>
+
+            <hr />
+            <div class="row"></div>
+
+
+            @{
+                if (Model.StudentList == null || !Model.StudentList.Any())
+                {
+                    <br />
+                    <p>No Students in the System</p>
+                    <br />
+                }
+                else
+                {
+                    // List out the Logged IN Students, then the Logged Out students
+
+                    <div class="row">
+                        <p class="text-white">List of students Logged In</p>
+
                         @{
-                            // Logged Out first
+                            // Logged IN first
                             foreach (var item in Model.StudentList)
                             {
-                                if (item.Status == _5051.Models.StudentStatusEnum.Out)
+                                if (item.Status == _5051.Models.StudentStatusEnum.In)
                                 {
-                                    <li>
-                                        <a id="@item.Name" href="~/Kiosk/SetLogIn/@item.Id" data-filename="/Content/img/@item.AvatarUri">
-                                            <img id="avatar-red" src="~/Content/img/@item.AvatarUri" width="25" height="25" />
-                                            <!--<i class="glyphicon glyphicon-user"></i>-->  @item.Name
+                                    <div class="col-sm-2">
+                                        <a id="@item.Id" href="~/Kiosk/SetLogOut/@item.Id">
+                                            <div class="col-sm-1">
+                                                <p class="text-center">
+                                                    <img id="avatar-green" src="~/Content/img/@item.AvatarUri" width="75" height="75" />
+                                                    <br />
+                                                    @item.Name
+                                                </p>
+                                            </div>
                                         </a>
-                                    </li>
-
+                                    </div>
                                 }
                             }
                         }
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="box">
-                <center>
-                    <img id="avatar" src="~/Content/img/defaultavatarX.png" width="200" height="200" />
-                    <p></p>
-                </center>
+                    </div>
 
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-6 text-left">
-            @Html.ActionLink("New profile", "NewProfile", "Kiosk", null, new { @class = "button button-block" })
-        </div>
-        <div class="col-md-6">
-            <div class="submitLink text-center">
-                <a href="#" data-toggle="modal" data-target="#loginModal" class="button">Clock in</a>
-                <a href="#" data-toggle="modal" data-target="#logoutModal" class="button">Clock Out</a>
-            </div>
-        </div>
-    </div>
-
-    <hr />
-    <div class="row"></div>
+                    <br />
+                    <br />
+                    <br />
+                    <div class="row">
 
 
-    @{
-        if (Model.StudentList == null || !Model.StudentList.Any())
-        {
-            <br />
-            <p>No Students in the System</p>
-            <br />
-        }
-        else
-        {
-            // List out the Logged IN Students, then the Logged Out students
-
-            <div class="row">
-                <p class="text-white">List of students Logged In</p>
-
-                @{
-                    // Logged IN first
-                    foreach (var item in Model.StudentList)
-                    {
-                        if (item.Status == _5051.Models.StudentStatusEnum.In)
-                        {
-                            <div class="col-sm-2">
-                                <a id="@item.Id" href="~/Kiosk/SetLogOut/@item.Id">
-                                    <div class="col-sm-1">
-                                        <p class="text-center">
-                                            <img id="avatar-green" src="~/Content/img/@item.AvatarUri" width="75" height="75" />
-                                            <br />
-                                            @item.Name
-                                        </p>
-                                    </div>
-                                </a>
-                            </div>
-                        }
-                    }
+                    </div>
                 }
-            </div>
+            }
 
-            <br />
-            <br />
-            <br />
-            <div class="row">
+        </div>
 
-
-            </div>
-        }
-    }
-
+    </div>
 </div>
-
-
-
 <!-- Login Modal -->
 <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
