Update Admin background to NightTime background. Update relevant pages background as well

--- a/5051/Views/Admin/Index.cshtml
+++ b/5051/Views/Admin/Index.cshtml
@@ -1,13 +1,14 @@
-﻿
+﻿<!--ADMIN INDEX -->
 @{
     ViewBag.Title = "Index";
 }
 
+
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
 
-    <div id="background2">
+    <div id="background3">
         <div class="row text-center">
-            <h2>WELCOME TO ADMIN PORTAL</h2>
+            <h2 style="color: #fff">WELCOME TO ADMIN PORTAL</h2>
 
             <div class="col-md-6">
                 <div>
