--- a/5051/Content/Login.css
+++ b/5051/Content/Login.css
@@ -29,6 +29,18 @@
     z-index: 1;
 }
 
+#background3 {
+    background-position: center center;
+    background-repeat: repeat;
+    background-size: cover;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    z-index: 1;
+    background-image: url("../Content/img/nightimeBackground.png");
+}
+
 html {
     overflow-y: scroll;
 }
